# astrolabe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_flags.txt
include/: Body.hpp  Camera.hpp  GameManager.hpp  Renderer.hpp  Shader.hpp  Texture2D.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Body.cpp  Camera.cpp  GameManager.cpp  Renderer.cpp  Shader.cpp  Texture2D.cpp  main.cpp
src/shaders/: planet.fs  sprite.fs  sprite.vs  test.fs  trail.fs
